Footer corrections and socials organised

--- a/courses.html
+++ b/courses.html
@@ -299,13 +299,15 @@
               </div>
           </div>
       </div>
-      <div><h3 class="text-center">If you would like to know more about <br>any of our courses please get in contact!</h3>
+       <!--Link to contact page-->
+      <div><h3 class="text-center top-margin">If you would like to know more about <br>any of our courses please get in contact!</h3>
         <h3 class="get-in-contact btn"><a href="../contact.html">Press Here!</a></h3>
       </div>
     </section>
     <footer>
       <div class="row footer bg-dark justify-content-center">
-        <div class="col-7 col-md-5 footer-left">
+        <!--Footer Left-->
+        <div class="col-6 col-md-7 footer-left">
           <p>Unit A3</p> 
           <p class="word-wrap">Seedbed Business Centre,</p>
           <p>Vanguard Way,</p>
@@ -314,16 +316,17 @@
           <br>
           <p><i class="bi bi-telephone-fill"></i> 01702 382390</p>
         </div>
-        <div class="col-5 col-md-5 footer-right">
-          <div class="footer-text-right">Follow us on</div>
+        <!--Footer Right-->
+        <div class="col-5 col-md-4 footer-right">
+          <div class="footer-text-right col-6">Follow us on</div>
           <div class="social-bottom row">
-            <div class="col col-padding">
+            <div class="col-2 col-padding">
               <a class="icon-link" href="https://facebook.com/BalancedPTS/" target="_blank">
                 <i class="bi bi-facebook icon-size"></i></a></div>
-            <div class="col">
+            <div class="col-2">
               <a class="icon-link" href="https://instagram.com/balanced_training" target="_blank">
                 <i class="bi bi-instagram icon-size"></i></a></div>
-            <div class="col">
+            <div class="col-2">
               <a class="icon-link" href="http://linkedin.com/company/balanced-training/" target="_blank">
                 <i class="bi bi-linkedin icon-size"></i></a></div>      
           </div>
