--- a/gym.html
+++ b/gym.html
@@ -185,9 +185,7 @@
                       </div>
                     </div>
                   </div>
-                </div><div class="row no-padding shade">
-                  <h3 class="get-in-contact btn"><a href="#contactform">Get in touch!</a></h3>
-                </div>
+                  <!--Optional Get in touch button-->
             </div>
           </div>
         </div>
@@ -214,7 +212,7 @@
                     <p>Sports massage relaxes tight muscles, increases movement and blood flow to the area which will allow 
                     you to train more effectively and move more comfortably in your day-to-day life!</p>
                     <br>
-                    <h3 class="get-in-contact btn"><a href="#contactform">Free Injury Assessment</a></h3>
+                    <h3 class="get-in-contact btn"><a href="../contact.html">Free Injury Assessment</a></h3>
                   </div>
                   <div class="col-12 col-md-6">
                     <img class="acc-pt-pic" src="assets/images/sarah-sm.jpeg" alt="Sarah delivering sports massage">
@@ -265,55 +263,16 @@
              </div>
           </div>
         </div>
-      <!--Opening Times-->
-      <div class="container-fluid map-opening">
-        <div class="row">
-          <div class="col-12 col-md-4 text-center opening">
-            <p class="opening-time">
-                    Opening Times
-            </p>
-            <table>
-              <tr>
-                <td class="day">Monday</td>
-                <td>08:00 - 20:00</td>
-              </tr>
-              <tr>
-                <td class="day">Tuesday</td>
-                <td>08:00 - 20:00</td>
-              </tr>
-              <tr>
-                <td class="day">Wednesday</td>
-                <td>08:00 - 20:00</td>
-              </tr>
-              <tr>
-                <td class="day">Thursday</td>
-                <td>08:00 - 20:00</td>
-              </tr>
-              <tr>
-                <td class="day">Friday</td>
-                <td>08:00 - 19:00</td>
-              </tr>
-              <tr>
-                <td class="day">Saturday</td>
-                <td>10:00 - 14:00</td>
-              </tr>
-              <tr>
-                <td class="day">Sunday</td>
-                <td>Closed</td>
-              </tr>
-            </table>
-            <p class="opening-message">Although open for use during these times we use a booking system to stop the studio getting too busy. So please book or contact us before you come to the gym.</p>
-          </div>
-          <div class="col-12 col-md-8 map-margin"><iframe class="iframe-map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1240.89847446817!2d0.795275!3d51.535284!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8d658dbbe5f7866!2sBalanced%20Training!5e0!3m2!1sen!2suk!4v1643890264291!5m2!1sen!2suk" loading="lazy"></iframe>
-          </div>
+        <!--Link to contact page-->
+        <div><h3 class="text-center top-margin">If you would like a FREE injury assessment or to know <br> more about personal training or the gym.</h3>
+          <h3 class="get-in-contact btn"><a href="../contact.html">Get in contact Here!</a></h3>
         </div>
-      </div>
     </section>
     <!--Footer-->
     <footer>
       <div class="row footer bg-dark justify-content-center">
         <!--Footer Left-->
-        <div class="col-7 col-md-5 footer-left">
+        <div class="col-6 col-md-7 footer-left">
           <p>Unit A3</p> 
           <p class="word-wrap">Seedbed Business Centre,</p>
           <p>Vanguard Way,</p>
@@ -323,16 +282,16 @@
           <p><i class="bi bi-telephone-fill"></i> 01702 382390</p>
         </div>
         <!--Footer Right-->
-        <div class="col-5 col-md-5 footer-right">
-          <div class="footer-text-right">Follow us on</div>
+        <div class="col-5 col-md-4 footer-right">
+          <div class="footer-text-right col-6">Follow us on</div>
           <div class="social-bottom row">
-            <div class="col col-padding">
+            <div class="col-2 col-padding">
               <a class="icon-link" href="https://facebook.com/BalancedPTS/" target="_blank">
                 <i class="bi bi-facebook icon-size"></i></a></div>
-            <div class="col">
+            <div class="col-2">
               <a class="icon-link" href="https://instagram.com/balanced_training" target="_blank">
                 <i class="bi bi-instagram icon-size"></i></a></div>
-            <div class="col">
+            <div class="col-2">
               <a class="icon-link" href="http://linkedin.com/company/balanced-training/" target="_blank">
                 <i class="bi bi-linkedin icon-size"></i></a></div>      
           </div>
