--- a/index.html
+++ b/index.html
@@ -82,23 +82,22 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="overlay-image" src="assets/images/gym-cropped.webp" alt="Gym Picture">
-           
-            <div class="container">
-              <div class="carousel-caption text-end">
-                <h1>Get Training</h1>
-                <p>Book your training sessions here.</p>
-                <p><a class="btn btn-lg btn-primary" href="https://calendly.com/balancedtraining/gym-access" target="_blank">Book Training</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
             <img class="overlay-image" src="assets/images/barbell.webp" alt="Barbell picture">
             <div class="container">
               <div class="carousel-caption">
                 <h1>Reach your goals!</h1>
                 <p>Find out about our different membership & Personal Training options.</p>
                 <p><a class="btn btn-lg btn-primary" href="gym.html">Learn more</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="overlay-image" src="assets/images/gym-cropped.webp" alt="Gym Picture">
+            <div class="container">
+              <div class="carousel-caption text-end">
+                <h1>Get Training</h1>
+                <p>Book your training sessions here.</p>
+                <p><a class="btn btn-lg btn-primary" href="https://calendly.com/balancedtraining/gym-access" target="_blank">Book Training</a></p>
               </div>
             </div>
           </div>
@@ -182,7 +181,7 @@
         <div class="container-fluid">
           <div class="row">
             <h1 class="contact-top">Get in contact!</h1>
-            <h2>If you'd like to find out more information please fill out the form below.</h2>
+            <h2>If you'd like to find out more about <br> any of our services please fill out the form below.</h2>
           </div>
           <div class="row justify-content-center">
             <div class="col-12 col-sm-10 col-lg-8 col-xl-6">
@@ -254,12 +253,11 @@
       </div>
       
     </section>
-  <div><p>test text</p></div>
     <!--Footer-->
     <footer>
       <div class="row footer bg-dark justify-content-center">
         <!--Footer Left-->
-        <div class="col-7 col-md-5 footer-left">
+        <div class="col-6 col-md-7 footer-left">
           <p>Unit A3</p> 
           <p class="word-wrap">Seedbed Business Centre,</p>
           <p>Vanguard Way,</p>
@@ -269,16 +267,16 @@
           <p><i class="bi bi-telephone-fill"></i> 01702 382390</p>
         </div>
         <!--Footer Right-->
-        <div class="col-5 col-md-5 footer-right">
-          <div class="footer-text-right">Follow us on</div>
+        <div class="col-5 col-md-4 footer-right">
+          <div class="footer-text-right col-6">Follow us on</div>
           <div class="social-bottom row">
-            <div class="col col-padding">
+            <div class="col-2 col-padding">
               <a class="icon-link" href="https://facebook.com/BalancedPTS/" target="_blank">
                 <i class="bi bi-facebook icon-size"></i></a></div>
-            <div class="col">
+            <div class="col-2">
               <a class="icon-link" href="https://instagram.com/balanced_training" target="_blank">
                 <i class="bi bi-instagram icon-size"></i></a></div>
-            <div class="col">
+            <div class="col-2">
               <a class="icon-link" href="http://linkedin.com/company/balanced-training/" target="_blank">
                 <i class="bi bi-linkedin icon-size"></i></a></div>      
           </div>
