--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
       </div>
       <!--Form-->
       <form>
-        <div class="container-fluid">
+        <div class="container-fluid top-margin">
           <div class="row">
             <h1 class="contact-top">Get in contact!</h1>
             <h2>If you'd like to find out more information please fill out the form below.</h2>
@@ -105,33 +105,6 @@
         </div>
       </form>
     </section>
-    <footer>
-      <div class="row footer bg-dark justify-content-center">
-        <div class="col-7 col-md-5 footer-left">
-          <p>Unit A3</p> 
-          <p class="word-wrap">Seedbed Business Centre,</p>
-          <p>Vanguard Way,</p>
-          <p>Shoeburyness,</p>
-          <p>SS3 0JB</p>
-          <br>
-          <p><i class="bi bi-telephone-fill"></i> 01702 382390</p>
-        </div>
-        <div class="col-5 col-md-5 footer-right">
-          <div class="footer-text-right">Follow us on</div>
-          <div class="social-bottom row">
-            <div class="col col-padding">
-              <a class="icon-link" href="https://facebook.com/BalancedPTS/" target="_blank">
-                <i class="bi bi-facebook icon-size"></i></a></div>
-            <div class="col">
-              <a class="icon-link" href="https://instagram.com/balanced_training" target="_blank">
-                <i class="bi bi-instagram icon-size"></i></a></div>
-            <div class="col">
-              <a class="icon-link" href="http://linkedin.com/company/balanced-training/" target="_blank">
-                <i class="bi bi-linkedin icon-size"></i></a></div>      
-          </div>
-        </div>
-      </div>
-    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </body>
