Thank you page after contact us

--- a/thank-you.html
+++ b/thank-you.html
@@ -72,38 +72,11 @@
         </div>
         </div>
       </div>
-      <!--Form-->
-      <form action="thank-you.html" method="POST">
-        <div class="container-fluid top-margin">
-          <div class="row">
-            <h1 class="contact-top">Get in contact!</h1>
-            <h2>If you'd like to find out more information please fill out the form below.</h2>
-          </div>
-          <div class="row justify-content-center">
-            <div class="col-12 col-sm-10 col-lg-8 col-xl-6">
-              <div class="input-group mb-1">
-                <span class="input-group-text basic-addon1" >First Name</span>
-                <input type="text" id="first-name" class="form-control" placeholder="First Name" aria-label="first-name" aria-describedby="first-name" required>
-              </div>
-              <div class="input-group mb-1">
-                  <span class="input-group-text basic-addon1">Last Name</span>
-                  <input type="text" id="last-name" class="form-control" placeholder="Last Name" aria-label="last-name" aria-describedby="last-name">
-              </div>
-              <div class="input-group mb-1">
-                <span class="input-group-text basic-addon1">Email Address</span>
-                <input type="email" id="email-address" class="form-control" placeholder="Email Address" aria-label="email" aria-describedby="email-address" required>
-              </div>
-              <div class="input-group mb-3">
-                <span class="input-group-text basic-addon1">Message:</span>
-                <textarea id="message-area" class="form-control" placeholder="Ask us anything" aria-label="message-area"></textarea>
-              </div>
-              <div class="text-center send-message-button">
-              <button type="submit" class="btn btn-primary" id="send-button" action="thank-you.html">Send Message</button>
-            </div>
-         </div>
-        </div>
-        </div>
-      </form>
+      <div class="row">
+        <h1 class="text-center top-margin">Thank you!</h1>
+        <h2>We will be in contact as soon as humanly possible.</h2>
+      </div>
+     
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
