--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         </div>
       </div>
       <!--Form-->
-      <form>
+      <form action="thank-you.html" method="POST">
         <div class="container-fluid">
           <div class="row">
             <h1 class="contact-top">Get in contact!</h1>
@@ -201,8 +201,8 @@
                 <span class="input-group-text basic-addon1">Message:</span>
                 <textarea id="message-area" class="form-control" placeholder="Ask us anything" aria-label="message-area"></textarea>
               </div>
-              <div class="text-center send-message-button">
-              <button type="submit" class="btn btn-primary" id="send-button">Send Message</button>
+              <div class="text-center send-message-button" action="thank-you.html">
+              <button type="submit" class="btn btn-primary" id="send-button" >Send Message</button>
             </div>
          </div>
         </div>
