Validation tweaks for no errors

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
       <div>
         <nav class="navbar navbar-expand-md navbar-light fixed-top shadow p-3 mb-4 bg-white">
           <div class="container-fluid no-padding">
-            <a class="navbar-brand" href="index.html"><img src="assets/images/logo_blue.png" height="60px" alt="Balanced Training Logo"></a>
+            <a class="navbar-brand" href="index.html"><img src="assets/images/logo_blue.png" alt="Balanced Training Logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" data-target="#navbarSupportedContent" aria-controls="navbarNav navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -98,7 +98,7 @@
                 <textarea id="message-area" class="form-control" placeholder="Ask us anything" aria-label="message-area"></textarea>
               </div>
               <div class="text-center send-message-button">
-              <button type="submit" class="btn btn-primary" id="send-button" action="thank-you.html">Send Message</button>
+              <button type="submit" class="btn btn-primary" id="send-button">Send Message</button>
             </div>
          </div>
         </div>
