--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 <span class="input-group-text basic-addon1">Message:</span>
                 <textarea id="message-area" class="form-control" placeholder="Ask us anything" aria-label="message-area"></textarea>
               </div>
-              <div class="text-center send-message-button" action="thank-you.html">
+              <div class="text-center send-message-button">
               <button type="submit" class="btn btn-primary" id="send-button" >Send Message</button>
             </div>
          </div>
