Readme.MD updated with features and bugs

--- a/contact.html
+++ b/contact.html
@@ -17,11 +17,11 @@
       <div>
         <nav class="navbar navbar-expand-md navbar-light fixed-top shadow p-3 mb-4 bg-white">
           <div class="container-fluid no-padding">
-            <a class="navbar-brand" href="index.html"><img src="assets/images/logo_blue.png" alt="Balanced Training Logo"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" data-target="#navbarSupportedContent" aria-controls="navbarNav navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="index.html"><img class="brand-logo" src="assets/images/logo_blue.webp" alt="Brand Logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" data-target="#navbarSupportedContent" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            </button> 
+            <div id="navbarNav" class="collapse navbar-collapse">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-white">
                 <li class="nav-item booking-button d-none d-lg-block">
                   <a class="nav-link" href="https://calendly.com/balancedtraining/gym-access" target="_blank">Book Training</a>
