--- a/gym.html
+++ b/gym.html
@@ -52,7 +52,7 @@
             <a class="icon-link hover" href="https://maps.google.com/maps/dir//Balanced+Training+Unit+A3,+Seedbed+Business+Centre+Vanguard+Way+Southend-on-Sea+SS3+9QY/@51.534883,0.7957074,16z/data=!4m5!4m4!1m0!1m2!1m1!1s0x47d927b7c1b1e26d:0x8d658dbbe5f7866" target="_blank">
               <span class="hover"><i class="bi bi-pin-map-fill"></i> Directions</span></a>
           </div>
-          <div class="col-6 col-sm-5 topcontact"><i class="bi bi-telephone-fill"></i> 07764496281 01702382390
+          <div class="col-6 col-sm-5 topcontact hover"><i class="bi bi-telephone-fill"></i> <a class="topcontact hover" href="tel:07764496281">07764496281</a><a class="topcontact hover" href="tel:01702382390"> 01702382390</a>
           </div>
           <div class="col-4 d-none d-sm-block no-padding">
           <div class="row social-top">
@@ -213,7 +213,7 @@
                     <p>Sports massage relaxes tight muscles, increases movement and blood flow to the area which will allow 
                     you to train more effectively and move more comfortably in your day-to-day life!</p>
                     <br>
-                    <h3 class="get-in-contact btn"><a href="../contact.html">Free Injury Assessment</a></h3>
+                    <h3 class="get-in-contact btn"><a href="courses.html">Free Injury Assessment</a></h3>
                   </div>
                   <div class="col-12 col-md-6">
                     <img class="acc-pt-pic" src="assets/images/sarah-sm.jpeg" alt="Sarah delivering sports massage">
