--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <a class="icon-link hover" href="https://maps.google.com/maps/dir//Balanced+Training+Unit+A3,+Seedbed+Business+Centre+Vanguard+Way+Southend-on-Sea+SS3+9QY/@51.534883,0.7957074,16z/data=!4m5!4m4!1m0!1m2!1m1!1s0x47d927b7c1b1e26d:0x8d658dbbe5f7866" target="_blank">
               <span class="hover"><i class="bi bi-pin-map-fill"></i> Directions</span></a>
           </div>
-          <div class="col-6 col-sm-5 topcontact"><i class="bi bi-telephone-fill"></i> 07764496281 01702382390
+          <div class="col-6 col-sm-5 topcontact hover"><i class="bi bi-telephone-fill"></i> <a class="topcontact hover" href="tel:07764496281">07764496281</a><a class="topcontact hover" href="tel:01702382390"> 01702382390</a>
           </div>
           <div class="col-4 d-none d-sm-block no-padding">
           <div class="row social-top">
@@ -66,7 +66,7 @@
               <i class="bi bi-instagram icon-size"></i></a>
             </div>
             <div class="col no-padding">
-              <a class="icon-link" href="https://www.linkedin.com/company/balanced-training/" target="_blank">
+              <a class="icon-link" href="https://linkedin.com/company/balanced-training/" target="_blank">
               <i class="bi bi-linkedin icon-size"></i></a>
             </div>
           </div>
@@ -277,7 +277,7 @@
               <a class="icon-link" href="https://instagram.com/balanced_training" target="_blank">
                 <i class="bi bi-instagram icon-size"></i></a></div>
             <div class="col-2">
-              <a class="icon-link" href="http://linkedin.com/company/balanced-training/" target="_blank">
+              <a class="icon-link" href="https://linkedin.com/company/balanced-training/" target="_blank">
                 <i class="bi bi-linkedin icon-size"></i></a></div>      
           </div>
         </div>
