Added link to directions on footer and phone number accessibility

--- a/index.html
+++ b/index.html
@@ -258,13 +258,16 @@
       <div class="row footer bg-dark justify-content-center">
         <!--Footer Left-->
         <div class="col-6 col-md-7 footer-left">
+        <a id="footer-left" class="footer-left hover" href="https://maps.google.com/maps/dir//Balanced+Training+Unit+A3,+Seedbed+Business+Centre+Vanguard+Way+Southend-on-Sea+SS3+9QY/@51.534883,0.7957074,16z/data=!4m5!4m4!1m0!1m2!1m1!1s0x47d927b7c1b1e26d:0x8d658dbbe5f7866" target="_blank">
           <p>Unit A3</p> 
           <p class="word-wrap">Seedbed Business Centre,</p>
           <p>Vanguard Way,</p>
           <p>Shoeburyness,</p>
-          <p>SS3 0JB</p>
+          <p>SS3 0JB</p></a>
           <br>
-          <p><i class="bi bi-telephone-fill"></i> 01702 382390</p>
+          <p><i class="bi bi-telephone-fill"></i><a class="footer-left hover" href="tel:01702 382390"> 01702 382390</a></p>
+          
+
         </div>
         <!--Footer Right-->
         <div class="col-5 col-md-4 footer-right">
