--- a/contact.html
+++ b/contact.html
@@ -57,15 +57,15 @@
           <div class="col-4 d-none d-sm-block no-padding">
           <div class="row social-top">
             <div class="col no-padding">
-              <a class="icon-link" href="https://facebook.com/BalancedPTS/" target="_blank">
+              <a class="icon-link" href="https://facebook.com/BalancedPTS/" target="_blank" alt="Link to Facebook">
               <i class="bi bi-facebook icon-size"></i></a>
             </div>
             <div class="col no-padding">
-              <a class="icon-link" href="https://instagram.com/balanced_training" target="_blank">
+              <a class="icon-link" href="https://instagram.com/balanced_training" target="_blank" alt="Link to Instagram">
               <i class="bi bi-instagram icon-size"></i></a>
             </div>
             <div class="col no-padding">
-              <a class="icon-link" href="https://www.linkedin.com/company/balanced-training/" target="_blank">
+              <a class="icon-link" href="https://www.linkedin.com/company/balanced-training/" target="_blank" alt="Link to Linked In">
               <i class="bi bi-linkedin icon-size"></i></a>
             </div>
           </div>
