--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
           <div class="col-4 d-none d-sm-block no-padding">
           <div class="row social-top">
             <div class="col no-padding">
-              <a class="icon-link" href="https://facebook.com/BalancedPTS/" target="_blank" alt="Link to Facebook">
+              <a class="icon-link" href="https://facebook.com/BalancedPTS/" target="_blank" title="Link to Facebook">
               <i class="bi bi-facebook icon-size"></i></a>
             </div>
             <div class="col no-padding">
-              <a class="icon-link" href="https://instagram.com/balanced_training" target="_blank" alt="Link to Instagram">
+              <a class="icon-link" href="https://instagram.com/balanced_training" target="_blank" title="Link to Instagram">
               <i class="bi bi-instagram icon-size"></i></a>
             </div>
             <div class="col no-padding">
-              <a class="icon-link" href="https://linkedin.com/company/balanced-training/" target="_blank" alt="Link to Linked In">
+              <a class="icon-link" href="https://linkedin.com/company/balanced-training/" target="_blank" title="Link to Linked In">
               <i class="bi bi-linkedin icon-size"></i></a>
             </div>
           </div>
@@ -187,19 +187,19 @@
             <div class="col-12 col-sm-10 col-lg-8 col-xl-6">
               <div class="input-group mb-1">
                 <span class="input-group-text basic-addon1" >First Name</span>
-                <input type="text" id="first-name" class="form-control" placeholder="First Name" aria-label="first-name" aria-describedby="first-name" required>
+                <input type="text" id="first-name" class="form-control" placeholder="First Name" aria-label="first-name" aria-describedby="first-name" title="First name field" label="First Name" required>
               </div>
               <div class="input-group mb-1">
                   <span class="input-group-text basic-addon1">Last Name</span>
-                  <input type="text" id="last-name" class="form-control" placeholder="Last Name" aria-label="last-name" aria-describedby="last-name">
+                  <input type="text" id="last-name" class="form-control" placeholder="Last Name" aria-label="last-name" aria-describedby="last-name" title="Last name field" label="Last Name">
               </div>
               <div class="input-group mb-1">
                 <span class="input-group-text basic-addon1">Email Address</span>
-                <input type="email" id="email-address" class="form-control" placeholder="Email Address" aria-label="email" aria-describedby="email-address" required>
+                <input type="email" id="email-address" class="form-control" placeholder="Email Address" aria-label="email" aria-describedby="email-address" label="Email Address"required>
               </div>
               <div class="input-group mb-3">
                 <span class="input-group-text basic-addon1">Message:</span>
-                <textarea id="message-area" class="form-control" placeholder="Ask us anything" aria-label="message-area"></textarea>
+                <textarea id="message-area" class="form-control" placeholder="Ask us anything" aria-label="message-area" title="Message field"></textarea>
               </div>
               <div class="text-center send-message-button">
               <button type="submit" class="btn btn-primary" id="send-button" >Send Message</button>
@@ -274,13 +274,13 @@
           <div class="footer-text-right col-6">Follow us on</div>
           <div class="social-bottom row">
             <div class="col-2 col-padding">
-              <a class="icon-link" href="https://facebook.com/BalancedPTS/" target="_blank" alt="Link to Facebook">
+              <a class="icon-link" href="https://facebook.com/BalancedPTS/" target="_blank" title="Link to Facebook">
                 <i class="bi bi-facebook icon-size"></i></a></div>
             <div class="col-2">
-              <a class="icon-link" href="https://instagram.com/balanced_training" target="_blank" alt="Link to Instagram">
+              <a class="icon-link" href="https://instagram.com/balanced_training" target="_blank" title="Link to Instagram">
                 <i class="bi bi-instagram icon-size"></i></a></div>
             <div class="col-2">
-              <a class="icon-link" href="https://linkedin.com/company/balanced-training/" target="_blank" alt="Link to Linked In">
+              <a class="icon-link" href="https://linkedin.com/company/balanced-training/" target="_blank" title="Link to Linked In">
                 <i class="bi bi-linkedin icon-size"></i></a></div>      
           </div>
         </div>
