Contact link changed on submission to thank u page

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         </div>
       </div>
       <!--Form-->
-      <form action="thank-you.html" method="POST">
+      <form action="/thank-you.html" method="POST">
         <div class="container-fluid">
           <div class="row">
             <h1 class="contact-top">Get in contact!</h1>
