--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
         </div>
       </div>
       <!--Form-->
-      <form action="thank-you.html" method="POST">
+      <form action="https://codegreg1.github.io/milestone_1_greg_goodrem/thank-you.html">
         <div class="container-fluid top-margin">
           <div class="row">
             <h1 class="contact-top">Get in contact!</h1>
