index page Submit button changed so does not bring up e405 also labels in the inputs altered

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         </div>
       </div>
       <!--Form-->
-      <form action="/thank-you.html" method="POST">
+      <form action="https://codegreg1.github.io/milestone_1_greg_goodrem/thank-you.html">
         <div class="container-fluid">
           <div class="row">
             <h1 class="contact-top">Get in contact!</h1>
@@ -187,15 +187,15 @@
             <div class="col-12 col-sm-10 col-lg-8 col-xl-6">
               <div class="input-group mb-1">
                 <span class="input-group-text basic-addon1" >First Name</span>
-                <input type="text" id="first-name" class="form-control" placeholder="First Name" aria-label="first-name" aria-describedby="first-name" title="First name field" label="First Name" required>
+                <input type="text" id="first-name" class="form-control" placeholder="First Name" aria-label="first-name" aria-describedby="first-name" title="First name field" required>
               </div>
               <div class="input-group mb-1">
                   <span class="input-group-text basic-addon1">Last Name</span>
-                  <input type="text" id="last-name" class="form-control" placeholder="Last Name" aria-label="last-name" aria-describedby="last-name" title="Last name field" label="Last Name">
+                  <input type="text" id="last-name" class="form-control" placeholder="Last Name" aria-label="last-name" aria-describedby="last-name" title="Last name field">
               </div>
               <div class="input-group mb-1">
                 <span class="input-group-text basic-addon1">Email Address</span>
-                <input type="email" id="email-address" class="form-control" placeholder="Email Address" aria-label="email" aria-describedby="email-address" label="Email Address" required>
+                <input type="email" id="email-address" class="form-control" placeholder="Email Address" aria-label="email" aria-describedby="email-address" required>
               </div>
               <div class="input-group mb-3">
                 <span class="input-group-text basic-addon1">Message:</span>
@@ -265,7 +265,7 @@
           <p>Shoeburyness,</p>
           <p>SS3 0JB</p></a>
           <br>
-          <p><i class="bi bi-telephone-fill"></i><a class="footer-left hover" href="tel:01702 382390"> 01702 382390</a></p>
+          <p><i class="bi bi-telephone-fill"></i><a class="footer-left hover" href="Tel:01702382390"> 01702 382390</a></p>
           
 
         </div>
