Correcting the telephone href and the input labels

--- a/gym.html
+++ b/gym.html
@@ -281,7 +281,7 @@
         <p>Shoeburyness,</p>
         <p>SS3 0JB</p></a>
         <br>
-        <p><i class="bi bi-telephone-fill"></i><a class="footer-left hover" href="tel:01702 382390"> 01702 382390</a></p>
+        <p><i class="bi bi-telephone-fill"></i><a class="footer-left hover" href="Tel:01702382390"> 01702 382390</a></p>
         
 
       </div>
