Updated links in project

--- a/courses.html
+++ b/courses.html
@@ -301,7 +301,7 @@
       </div>
        <!--Link to contact page-->
       <div><h3 class="text-center top-margin">If you would like to know more about <br>any of our courses please get in contact!</h3>
-        <h3 class="get-in-contact btn"><a href="../contact.html">Press Here!</a></h3>
+        <h3 class="get-in-contact btn"><a href="https://codegreg1.github.io/milestone_1_greg_goodrem/contact.html">Press Here!</a></h3>
       </div>
     </section>
   <!--Footer-->
