--- a/gym.html
+++ b/gym.html
@@ -213,7 +213,7 @@
                     <p>Sports massage relaxes tight muscles, increases movement and blood flow to the area which will allow 
                     you to train more effectively and move more comfortably in your day-to-day life!</p>
                     <br>
-                    <h3 class="get-in-contact btn"><a href="courses.html">Free Injury Assessment</a></h3>
+                    <h3 class="get-in-contact btn"><a href="https://codegreg1.github.io/milestone_1_greg_goodrem/contact.html">Free Injury Assessment</a></h3>
                   </div>
                   <div class="col-12 col-md-6">
                     <img class="acc-pt-pic" src="assets/images/sarah-sm.jpeg" alt="Sarah delivering sports massage">
@@ -266,7 +266,7 @@
         </div>
         <!--Link to contact page-->
         <div><h3 class="text-center top-margin">If you would like a FREE injury assessment or to know <br> more about personal training or the gym.</h3>
-          <h3 class="get-in-contact btn"><a href="../contact.html">Get in contact Here!</a></h3>
+          <h3 class="get-in-contact btn"><a href="https://codegreg1.github.io/milestone_1_greg_goodrem/contact.html">Get in contact Here!</a></h3>
         </div>
     </section>
    <!--Footer-->
