Edited Membership links to outside list

--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
       <div>
         <nav class="navbar navbar-expand-md navbar-light fixed-top shadow p-3 mb-4 bg-white">
           <div class="container-fluid no-padding">
+            <!--The image used has been supplied by Balanced Training-->
             <a class="navbar-brand" href="index.html"><img class="brand-logo" src="assets/images/logo_blue.webp" alt="Brand Logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" data-target="#navbarSupportedContent" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -24,6 +25,7 @@
             <div id="navbarNav" class="collapse navbar-collapse">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-white">
                 <li class="nav-item booking-button d-none d-lg-block">
+                  <!--The link is the current Booking system address used by Balanced Training-->
                   <a class="nav-link" href="https://calendly.com/balancedtraining/gym-access" target="_blank">Book Training</a>
                 </li>
                 <li class="nav-item">
@@ -49,6 +51,7 @@
       <div class="container-fluid no-padding">
         <div class="row">
           <div class="col-6 col-sm-3 topcontact">
+            <!--The link is the current google maps address used by Balanced Training which should lead to directions-->
             <a class="icon-link hover" href="https://maps.google.com/maps/dir//Balanced+Training+Unit+A3,+Seedbed+Business+Centre+Vanguard+Way+Southend-on-Sea+SS3+9QY/@51.534883,0.7957074,16z/data=!4m5!4m4!1m0!1m2!1m1!1s0x47d927b7c1b1e26d:0x8d658dbbe5f7866" target="_blank">
               <span class="hover"><i class="bi bi-pin-map-fill"></i> Directions</span></a>
           </div>
@@ -57,14 +60,17 @@
           <div class="col-4 d-none d-sm-block no-padding">
           <div class="row social-top">
             <div class="col no-padding">
+              <!--The link is the current Facebook address used by Balanced Training-->
               <a class="icon-link" href="https://facebook.com/BalancedPTS/" target="_blank" title="Link to Facebook">
               <i class="bi bi-facebook icon-size"></i></a>
             </div>
             <div class="col no-padding">
+              <!--The link is the current instagram address used by Balanced Training-->
               <a class="icon-link" href="https://instagram.com/balanced_training" target="_blank" title="Link to Instagram">
               <i class="bi bi-instagram icon-size"></i></a>
             </div>
             <div class="col no-padding">
+              <!--The link is the current linkedin address used by Balanced Training-->
               <a class="icon-link" href="https://www.linkedin.com/company/balanced-training/" target="_blank" title="Link to Linked In">
               <i class="bi bi-linkedin icon-size"></i></a>
             </div>
@@ -73,6 +79,7 @@
         </div>
       </div>
       <!--Form-->
+      <!--The link is the currently the thank you page expected after filling out a form-->
       <form action="https://codegreg1.github.io/milestone_1_greg_goodrem/thank-you.html">
         <div class="container-fluid top-margin">
           <div class="row">
