--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <!--Navigation bar-->
         <nav class="navbar navbar-expand-md navbar-light fixed-top shadow p-3 mb-4 bg-white">
           <div class="container-fluid no-padding">
+            <!--The image used has been supplied by Balanced Training-->
             <a class="navbar-brand" href="index.html"><img class="brand-logo" src="assets/images/logo_blue.webp" alt="Brand Logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" data-target="#navbarSupportedContent" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -25,6 +26,7 @@
             <div id="navbarNav" class="collapse navbar-collapse">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-white">
                 <li class="nav-item booking-button d-none d-lg-block">
+                  <!--The link is the current external booking address used by Balanced Training-->
                   <a class="nav-link" href="https://calendly.com/balancedtraining/gym-access" target="_blank">Book Training</a>
                 </li>
                 <li id="active" class="nav-item active">
@@ -58,14 +60,17 @@
           <div class="col-4 d-none d-sm-block no-padding">
           <div class="row social-top">
             <div class="col no-padding">
+              <!--The link is the current external Facebook address used by Balanced Training-->
               <a class="icon-link" href="https://facebook.com/BalancedPTS/" target="_blank" title="Link to Facebook">
               <i class="bi bi-facebook icon-size"></i></a>
             </div>
             <div class="col no-padding">
+              <!--The link is the current instagram address used by Balanced Training-->
               <a class="icon-link" href="https://instagram.com/balanced_training" target="_blank" title="Link to Instagram">
               <i class="bi bi-instagram icon-size"></i></a>
             </div>
             <div class="col no-padding">
+              <!--The link is the current linkedin address used by Balanced Training-->
               <a class="icon-link" href="https://linkedin.com/company/balanced-training/" target="_blank" title="Link to Linked In">
               <i class="bi bi-linkedin icon-size"></i></a>
             </div>
@@ -82,6 +87,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
+            <!--The image used has been supplied by Balanced Training-->
             <img class="overlay-image" src="assets/images/barbell.webp" alt="Barbell picture">
             <div class="container">
               <div class="carousel-caption">
@@ -92,16 +98,19 @@
             </div>
           </div>
           <div class="carousel-item">
+            <!--The image used has been supplied by Balanced Training-->
             <img class="overlay-image" src="assets/images/gym-cropped.webp" alt="Gym Picture">
             <div class="container">
               <div class="carousel-caption text-end">
                 <h1>Get Training</h1>
                 <p>Book your training sessions here.</p>
+                <!--The link is the current Booking system address used by Balanced Training-->
                 <p><a class="btn btn-lg btn-primary" href="https://calendly.com/balancedtraining/gym-access" target="_blank">Book Training</a></p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
+            <!--The image used has been supplied by Balanced Training-->
             <img class="overlay-image" src="assets/images/ptpic.webp" alt="Personal Training picture">
             <div class="container">
               <div class="carousel-caption text-start">
@@ -124,6 +133,7 @@
       <!--General Info & Pics-->
       <div class="container-fluid no-padding">
         <div class="col-12 spacer d-lg-none">
+          <!--The link is the current Booking system address used by Balanced Training-->
           <a class="button-border align-middle btn d-lg-none" href="https://calendly.com/balancedtraining/gym-access" target="_blank">Book Training</a></div>
           <div class="row">
           <div class="col-12 col-md-6 col-lg-8">
@@ -135,9 +145,11 @@
             <p>If you have any questions or concerns, please do not hesitate to get in touch.</p>
           </div>
           <div class="col-6 col-lg-4">
+            <!--The image used has been supplied by Balanced Training-->
             <img class="gym-pic" src="assets/images/gym-front.webp" alt="Front of gym">
           </div>
           <div class="col-6 d-block d-md-none">
+            <!--The image used has been supplied by Balanced Training-->
             <img class="gym-pic" src="assets/images/gym-rear.webp" alt="Rear of gym">
           </div>
         </div>
@@ -152,6 +164,7 @@
       <!-- 3 circular pictures + info -->
         <div class="row">
           <div class="col-12 col-md-6 col-lg-4 shadow p-3 mb-5 bg-body rounded">
+            <!--The image used has been supplied by Balanced Training-->
             <img class="profilepic" src="assets/images/greg_head.webp" alt="Greg Profile pic">
             <h4>Greg - Personal Trainer</h4>
             <p>Having delivered THOUSANDS of hours of personal training since starting in 2005, Greg can 
@@ -159,6 +172,7 @@
               sport or want to get rid of any excess fat and look great for your next holiday.</p>
           </div>
           <div class="col-12 col-md-6 col-lg-4 shadow p-3 mb-5 bg-body rounded">
+            <!--The image used has been supplied by Balanced Training-->
             <img class="profilepic" src="assets/images/sarah_head.webp" alt="Sarah Profile pic">
             <h4>Sarah - Sports Therapist & PT</h4>
             <p>Being a Sports Therapist and Personal trainer gives Sarah an insight into how to both,
@@ -167,6 +181,7 @@
               </p>
           </div>
           <div class="col-12 col-md-6 col-lg-4 shadow p-3 mb-5 bg-body rounded">
+            <!--The image used has been supplied by Balanced Training-->
             <img class="profilepic" src="assets/images/max_head.JPG" alt="Max profile pic">
             <h4>Maximus - Emotional Support</h4>
             <p>This little guy is an integral part of our team at Balanced Training and always brings a smile to 
@@ -258,6 +273,7 @@
       <div class="row footer bg-dark justify-content-center">
         <!--Footer Left-->
         <div class="col-6 col-md-7 footer-left">
+          <!--The link is the geographical address on google maps used by Balanced Training-->
         <a id="footer-left" class="footer-left hover" href="https://maps.google.com/maps/dir//Balanced+Training+Unit+A3,+Seedbed+Business+Centre+Vanguard+Way+Southend-on-Sea+SS3+9QY/@51.534883,0.7957074,16z/data=!4m5!4m4!1m0!1m2!1m1!1s0x47d927b7c1b1e26d:0x8d658dbbe5f7866" target="_blank">
           <p>Unit A3</p> 
           <p class="word-wrap">Seedbed Business Centre,</p>
@@ -274,12 +290,15 @@
           <div class="footer-text-right col-6">Follow us on</div>
           <div class="social-bottom row">
             <div class="col-2 col-padding">
+              <!--The link is the current Facebook address used by Balanced Training-->
               <a class="icon-link" href="https://facebook.com/BalancedPTS/" target="_blank" title="Link to Facebook">
                 <i class="bi bi-facebook icon-size"></i></a></div>
             <div class="col-2">
+              <!--The link is the current instagram address used by Balanced Training-->
               <a class="icon-link" href="https://instagram.com/balanced_training" target="_blank" title="Link to Instagram">
                 <i class="bi bi-instagram icon-size"></i></a></div>
             <div class="col-2">
+              <!--The link is the current linkedin address used by Balanced Training-->
               <a class="icon-link" href="https://linkedin.com/company/balanced-training/" target="_blank" title="Link to Linked In">
                 <i class="bi bi-linkedin icon-size"></i></a></div>      
           </div>
