--- a/courses.html
+++ b/courses.html
@@ -17,6 +17,7 @@
       <div>
         <nav class="navbar navbar-expand-md navbar-light fixed-top shadow p-3 mb-4 bg-white">
           <div class="container-fluid no-padding">
+            <!--The image used has been supplied by Balanced Training-->
             <a class="navbar-brand" href="index.html"><img class="brand-logo" src="assets/images/logo_blue.png" alt="Balanced Training logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" data-target="#navbarSupportedContent" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -76,6 +77,7 @@
       <div class="accordion" id="accordionExample">
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
+            <!--The image used has been supplied by Balanced Training-->
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
               Personal Training Courses <img class="icon" src="assets/images/pt-icon-small.png" alt="Smaller Personal training icon">  <i class="bi bi-chevron-down chev-down"></i> <i class="bi bi-chevron-up chev-up"></i>
             </button>
@@ -97,6 +99,7 @@
                     <p>Below there is more information on each course and each unit you need to complete:</p>
                   </div>
                   <div class="col-12 col-md-4">
+                    <!--The image used has been supplied by Balanced Training-->
                   <img class="acc-pt-pic" src="assets/images/pt-icon-cropped.png" alt="Cropped Personal training icon">
                   </div>
                 </div>
@@ -188,6 +191,7 @@
         <!--Sports Massage Accordion-->
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingTwo">
+            <!--The image used has been supplied by Balanced Training-->
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
               Sports Massage Courses <img class="icon" src="assets/images/sm-icon-small.png" alt="Small Sports massage icon">  <i class="bi bi-chevron-down chev-down"></i> <i class="bi bi-chevron-up chev-up"></i>
             </button>
@@ -210,6 +214,7 @@
                     <p></p>
                   </div>
                   <div class="col-12 col-md-6">
+                    <!--The image used has been supplied by Balanced Training-->
                     <img class="acc-pt-pic" src="assets/images/sm-icon-cropped.png" alt="Sports massage icon">
                   </div>
                 </div>
@@ -265,6 +270,7 @@
         <!--First Aid Accordion-->
       <div class="accordion-item">
           <h2 class="accordion-header" id="headingThree">
+            <!--The image used has been supplied by Balanced Training-->
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
               First Aid Courses <img class="icon" src="assets/images/first-aid-cropped.png" alt="First aid picture">  <i class="bi bi-chevron-down chev-down"></i> <i class="bi bi-chevron-up chev-up"></i>
             </button>
@@ -292,6 +298,7 @@
                     <p></p>
                   </div>
                   <div class="col-12 col-md-6">
+                    <!--The image used has been supplied by Balanced Training-->
                     <img class="acc-pt-pic" src="assets/images/first-aid-full.png" alt="Full First Aid picture">
                   </div>
                 </div>
