Optimised the images

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-4 shadow p-3 mb-5 bg-body rounded">
             <!--The image used has been supplied by Balanced Training-->
-            <img class="profilepic" src="assets/images/max_head.JPG" alt="Max profile pic">
+            <img class="profilepic" src="assets/images/max_head.webp" alt="Max profile pic">
             <h4>Maximus - Emotional Support</h4>
             <p>This little guy is an integral part of our team at Balanced Training and always brings a smile to 
               your face whenever he comes through the gym door carrying a ball. He usually likes to chill
