--- a/contact.html
+++ b/contact.html
@@ -99,6 +99,7 @@
     <form id="form" class="form" action="https://codegreg1.github.io/milestone_1_greg_goodrem/thank-you.html">
       <div class="container-fluid">
         <div class="row">
+          <br>
           <h1 class="contact-top">Get in contact!</h1>
           <h2>If you'd like to find out more about <br> any of our services please fill out the form below.</h2>
         </div>
@@ -130,6 +131,39 @@
             </div>
     </form>
   </section>
+  <footer>
+    <div class="row footer bg-dark justify-content-center">
+      <!--Footer Left-->
+      <div class="col-6 col-md-7 footer-left">
+      <a id="footer-left" class="footer-left hover" href="https://maps.google.com/maps/dir//Balanced+Training+Unit+A3,+Seedbed+Business+Centre+Vanguard+Way+Southend-on-Sea+SS3+9QY/@51.534883,0.7957074,16z/data=!4m5!4m4!1m0!1m2!1m1!1s0x47d927b7c1b1e26d:0x8d658dbbe5f7866" target="_blank">
+        <p>Unit A3</p> 
+        <p class="word-wrap">Seedbed Business Centre,</p>
+        <p>Vanguard Way,</p>
+        <p>Shoeburyness,</p>
+        <p>SS3 0JB</p></a>
+        <br>
+        <p><i class="bi bi-telephone-fill"></i><a class="footer-left hover" href="Tel:01702382390"> 01702 382390</a></p>
+        
+
+      </div>
+      <!--Footer Right-->
+      <div class="col-5 col-md-4 footer-right">
+        <div class="footer-text-right col-6">Follow us on</div>
+        <div class="social-bottom row">
+          <div class="col-2 col-padding">
+            <a class="icon-link" href="https://facebook.com/BalancedPTS/" target="_blank" title="Link to Facebook">
+              <i class="bi bi-facebook icon-size"></i></a></div>
+          <div class="col-2">
+            <a class="icon-link" href="https://instagram.com/balanced_training" target="_blank" title="Link to Instagram">
+              <i class="bi bi-instagram icon-size"></i></a></div>
+          <div class="col-2">
+            <a class="icon-link" href="https://linkedin.com/company/balanced-training/" target="_blank" title="Link to Linked In">
+              <i class="bi bi-linkedin icon-size"></i></a></div>      
+        </div>
+      </div>
+    </div>
+  </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
