--- a/courses.html
+++ b/courses.html
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand-md navbar-light fixed-top shadow p-3 mb-4 bg-white">
           <div class="container-fluid no-padding">
             <!--The image used has been supplied by Balanced Training-->
-            <a class="navbar-brand" href="index.html"><img class="brand-logo" src="assets/images/logo_blue.png" alt="Balanced Training logo"></a>
+            <a class="navbar-brand" href="index.html"><img class="brand-logo" src="assets/images/logo_blue.webp" alt="Balanced Training logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" data-target="#navbarSupportedContent" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -79,7 +79,7 @@
           <h2 class="accordion-header" id="headingOne">
             <!--The image used has been supplied by Balanced Training-->
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-              Personal Training Courses <img class="icon" src="assets/images/pt-icon-small.png" alt="Smaller Personal training icon">  <i class="bi bi-chevron-down chev-down"></i> <i class="bi bi-chevron-up chev-up"></i>
+              Personal Training Courses <img class="icon" src="assets/images/pt-icon-small.webp" alt="Smaller Personal training icon">  <i class="bi bi-chevron-down chev-down"></i> <i class="bi bi-chevron-up chev-up"></i>
             </button>
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne">
@@ -100,7 +100,7 @@
                   </div>
                   <div class="col-12 col-md-4">
                     <!--The image used has been supplied by Balanced Training-->
-                  <img class="acc-pt-pic" src="assets/images/pt-icon-cropped.png" alt="Cropped Personal training icon">
+                  <img class="acc-pt-pic" src="assets/images/pt-icon-cropped.webp" alt="Cropped Personal training icon">
                   </div>
                 </div>
                 <!--Tabs for PT Courses-->
@@ -193,7 +193,7 @@
           <h2 class="accordion-header" id="headingTwo">
             <!--The image used has been supplied by Balanced Training-->
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Sports Massage Courses <img class="icon" src="assets/images/sm-icon-small.png" alt="Small Sports massage icon">  <i class="bi bi-chevron-down chev-down"></i> <i class="bi bi-chevron-up chev-up"></i>
+              Sports Massage Courses <img class="icon" src="assets/images/sm-icon-small.webp" alt="Small Sports massage icon">  <i class="bi bi-chevron-down chev-down"></i> <i class="bi bi-chevron-up chev-up"></i>
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo">
@@ -215,7 +215,7 @@
                   </div>
                   <div class="col-12 col-md-6">
                     <!--The image used has been supplied by Balanced Training-->
-                    <img class="acc-pt-pic" src="assets/images/sm-icon-cropped.png" alt="Sports massage icon">
+                    <img class="acc-pt-pic" src="assets/images/sm-icon-cropped.webp" alt="Sports massage icon">
                   </div>
                 </div>
                 <div class="top-tabs">
@@ -272,7 +272,7 @@
           <h2 class="accordion-header" id="headingThree">
             <!--The image used has been supplied by Balanced Training-->
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              First Aid Courses <img class="icon" src="assets/images/first-aid-cropped.png" alt="First aid picture">  <i class="bi bi-chevron-down chev-down"></i> <i class="bi bi-chevron-up chev-up"></i>
+              First Aid Courses <img class="icon" src="assets/images/first-aid-cropped.webp" alt="First aid picture">  <i class="bi bi-chevron-down chev-down"></i> <i class="bi bi-chevron-up chev-up"></i>
             </button>
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
@@ -299,7 +299,7 @@
                   </div>
                   <div class="col-12 col-md-6">
                     <!--The image used has been supplied by Balanced Training-->
-                    <img class="acc-pt-pic" src="assets/images/first-aid-full.png" alt="Full First Aid picture">
+                    <img class="acc-pt-pic" src="assets/images/first-aid-full.webp" alt="Full First Aid picture">
                   </div>
                 </div>
                 </div>
