--- a/gym.html
+++ b/gym.html
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand-md navbar-light fixed-top shadow p-3 mb-4 bg-white">
           <div class="container-fluid no-padding">
             <!--The image used in the nav bar has been supplied by Balanced Training-->
-            <a class="navbar-brand" href="index.html"><img class="brand-logo" src="assets/images/logo_blue.png" alt="Balanced Training Logo"></a>
+            <a class="navbar-brand" href="index.html"><img class="brand-logo" src="assets/images/logo_blue.webp" alt="Balanced Training Logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" data-target="#navbarSupportedContent" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -79,7 +79,7 @@
           <h2 class="accordion-header" id="headingOne">
             <!--The image used has been supplied by Balanced Training-->
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-               Personal Training <img class="icon" src="assets/images/pt-icon-small.png" alt="Personal training icon"> <i class="bi bi-chevron-down chev-down"></i> <i class="bi bi-chevron-up chev-up"></i>
+               Personal Training <img class="icon" src="assets/images/pt-icon-small.webp" alt="Personal training icon"> <i class="bi bi-chevron-down chev-down"></i> <i class="bi bi-chevron-up chev-up"></i>
             </button>
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne">
@@ -96,7 +96,7 @@
                   </div>
                   <div class="col-12 col-md-6">
                   <!--The image used has been supplied by Balanced Training-->
-                  <img class="acc-pt-pic" src="assets/images/gym-front.JPG" alt="Front of gym">
+                  <img class="acc-pt-pic" src="assets/images/gym-front.webp" alt="Front of gym">
                   </div>
                 </div>
                 <!--Tabs for PT-->
@@ -137,7 +137,7 @@
                       
                           <div class="col-11 col-md-5 align-items-center">
                             <!--The image used has been supplied by Balanced Training-->
-                            <img class="acc-tab-pic" src="assets/images/sarah-pt.jpg" alt="Sarah personal training">
+                            <img class="acc-tab-pic" src="assets/images/sarah-pt.webp" alt="Sarah personal training">
                           </div>
                         </div>
                     </div>
@@ -154,7 +154,7 @@
                           </div>
                           <div class="col-11 col-sm-5 no-padding">
                             <!--The image used has been supplied by Balanced Training-->
-                            <img class="acc-tab-pic" src="assets/images/outdoor-pt.jpg" alt="Outdoor training picture">
+                            <img class="acc-tab-pic" src="assets/images/outdoor-pt.webp" alt="Outdoor training picture">
                           </div>
                        </div>
                       </div>
@@ -170,7 +170,7 @@
                           </div>
                           <div class="col-11 col-sm-5 no-padding">
                             <!--The image used has been supplied by Balanced Training-->
-                            <img class="acc-tab-pic" src="assets/images/online-pt.png" alt="Online screenshot">
+                            <img class="acc-tab-pic" src="assets/images/online-pt.webp" alt="Online screenshot">
                           </div>
                        </div>
                       </div>
@@ -186,7 +186,7 @@
                           </div>
                           <div class="col-11 col-sm-5 no-padding">
                             <!--The image used has been supplied by Balanced Training-->
-                            <img class="acc-tab-pic" src="assets/images/tab-pic-prog.png" alt="Programme picture">
+                            <img class="acc-tab-pic" src="assets/images/tab-pic-prog.webp" alt="Programme picture">
                           </div>
                        </div>
                       </div>
@@ -204,7 +204,7 @@
           <h2 class="accordion-header" id="headingTwo">
             <!--The image used has been supplied by Balanced Training-->
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Sports Massage  <img class="icon" src="assets/images/sm-icon-small.png" alt="Sports massage icon"> <i class="bi bi-chevron-down chev-down"></i> <i class="bi bi-chevron-up chev-up"></i>
+              Sports Massage  <img class="icon" src="assets/images/sm-icon-small.webp" alt="Sports massage icon"> <i class="bi bi-chevron-down chev-down"></i> <i class="bi bi-chevron-up chev-up"></i>
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo">
@@ -225,7 +225,7 @@
                   </div>
                   <div class="col-12 col-md-6">
                     <!--The image used has been supplied by Balanced Training-->
-                    <img class="acc-pt-pic" src="assets/images/sarah-sm.jpeg" alt="Sarah delivering sports massage">
+                    <img class="acc-pt-pic" src="assets/images/sarah-sm.webp" alt="Sarah delivering sports massage">
                   </div>
                 </div>
               </div>
@@ -237,7 +237,7 @@
           <h2 class="accordion-header" id="headingThree">
             <!--The image used has been supplied by Balanced Training-->
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Memberships <img class="icon" src="assets/images/gm-icon-small.png" alt="General membership icon"> <i class="bi bi-chevron-down chev-down"></i> <i class="bi bi-chevron-up chev-up"></i>
+              Memberships <img class="icon" src="assets/images/gm-icon-small.webp" alt="General membership icon"> <i class="bi bi-chevron-down chev-down"></i> <i class="bi bi-chevron-up chev-up"></i>
             </button>
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
