Btn update index page

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <div class="carousel-caption">
                 <h1>Reach your goals!</h1>
                 <p>Find out about our different membership & Personal Training options.</p>
-                <p><a class="btn btn-lg btn-primary" href="gym.html">Learn more</a></p>
+                <p><a class="btn btn-lg btn-primary" href="gym.html">Start Here</a></p>
               </div>
             </div>
           </div>
@@ -120,7 +120,7 @@
               <div class="carousel-caption text-start">
                 <h1>Courses</h1>
                 <p class="slider-text">Info about PT, Sports Massage or First Aid courses.</p>
-                <p><a class="btn btn-lg btn-primary" href="courses.html">Learn more</a></p>
+                <p><a class="btn btn-lg btn-primary" href="courses.html">Course Info</a></p>
               </div>
             </div>
           </div>
