--- a/index.html
+++ b/index.html
@@ -228,6 +228,9 @@
                 <input class="send-button btn btn-primary btn-large blue darken-4 center " type="submit" id="buttonsm"
                   value="Send Email" onclick="SendMail()">
               </div>
+            </div>
+          </div>
+        </div>
       </form>
       <!--Opening Times-->
       <div class="container-fluid map-opening">
