--- a/contact.html
+++ b/contact.html
@@ -129,6 +129,9 @@
               <input class="send-button btn btn-primary btn-large blue darken-4 center " type="submit" id="buttonsm"
                 value="Send Email" onclick="SendMail()">
             </div>
+          </div>
+        </div>
+      </div>
     </form>
   </section>
   <footer>
