--- a/gym.html
+++ b/gym.html
@@ -254,7 +254,7 @@
                     <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Ongoing Support from our motivating trainers</li>
                     <li class="list-group-item list-group-item-info"><h3>£24.99</h3></li>
                   </ul>
-                    <button class="list-group-item list-group-item-info btn get-started"><a href="https://pay.gocardless.com/AL00035RP1FPVA" target="_blank"><h3>Get Started</h3></a></button>
+                    <div class="list-group-item list-group-item-info btn btn-primary get-started"><h3><a href="https://pay.gocardless.com/AL00035RP1FPVA" target="_blank">Get Started</a></h3></div>
                   
                  </div>
                  <div class="col-12 col-md-6">
@@ -268,7 +268,7 @@
                     <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Ongoing Support from our motivating trainers</li>
                     <li class="list-group-item list-group-item-info"><h3>£74.95</h3></li> 
                   </ul>
-                  <button class="list-group-item list-group-item-info btn get-started"><a class="" href="https://pay.gocardless.com/AL0004CDGKQFY7" target="_blank"><h3>Get Started</h3></a></button>
+                  <div class="list-group-item list-group-item-info btn btn-primary get-started"><h3><a class="" href="https://pay.gocardless.com/AL0004CDGKQFY7" target="_blank">Get Started</a></h3></div>
                   
                  </div>
                  <p class="membership-agreement">After stting up the subscription membership is rolling and will be renewed 
